[Replace 20241030_changemarker.html]

--- a/20241030_changemarker.html
+++ b/20241030_changemarker.html
@@ -12,7 +12,7 @@
  		<!-- ④ マーカーを追加 ここから -->
   		<a-marker preset="custom" type="pattern" url="pattern-paint_kosyo.patt">
    			<!-- ⑤ オブジェクトの追加 -->
-			<a-image src="OIP.jpg">
+			<a-image src="giraffe.png">
 			</a-image>
 		</a-marker>
 
